# p4lm

./: .gitignore  README.md  Taskfile.yaml  pyproject.toml  train_test.py
.github/workflows/: test.yml
examples/: extraction.py  training.py
lib/env/: Env.py
lib/log/: Logger.py
lib/utils/: utils.py
src/configs/: type.py
src/extract/: Extractor.py
src/language/: _language.py
src/language/esm/: _esm.py  esm1b.py  esm2.py
src/lib/config/: dir.py
src/main/extract/: EXT0001.py
src/modules/criterion/: criterion.py
src/modules/data_pipeline/: aggregator.py  data_pipeline.py  initial_pipe.py  initialize.py  trigonometric_positional_encoder.py
src/modules/dataloader/: dataloader.py
src/modules/extract/extractor/: Extractor.py
src/modules/extract/language/esm/: _esm.py  esm_converter.py
src/modules/extract/language/quick_esm/: _quick_esm.py  create_source.py  esm1b.h5  esm2.h5
src/modules/extractor/: Extractor.py
src/modules/language/: _language.py
src/modules/language/esm/: _esm.py  esm1b.py  esm2.py
src/modules/model/: configurable_model.py
src/modules/protein/: exceptions.py  protein.py  protein_list.py
src/modules/train/: criterion.py  epoch_results.py  trainer.py  types.py
src/modules/visualize/: visualizer.py
src/protein/: protein.py
src/timer/: Timer.py
temp/: temp.py
tests/modules/protein/: test_protein.py
tests/protein/language/esm/: test_esm2.py
tests/sources/: data.csv  data.h5
tests/src/modules/extract/extractor/: test_extractor.py
tests/src/modules/protein/: test_protein.py  test_protein_list.py
(+4 files in other folders)
