[project]
name = "p4ln"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "esm>=3.0.3",
    "h5py>=3.12.1",
    "huggingface-hub>=0.27.0",
    "matplotlib>=3.10.0",
    "mypy>=1.14.0",
    "numpy>=2.2.1",
    "polars>=1.18.0",
    "pytest>=8.3.4",
    "ruff>=0.8.4",
    "sqlalchemy>=2.0.37",
    "torch>=2.5.1",
    "tqdm>=4.67.1",
]

[tool.ruff.lint]
select = ["F", "I"]
ignore = ['E203']

[tool.ruff]
line-length = 120

